[gd_scene load_steps=3 format=3 uid="uid://dy5erb1lkxh7t"]

[ext_resource type="Script" path="res://addons/gd_cubism/example/viewer.gd" id="1_wysar"]

[sub_resource type="ViewportTexture" id="ViewportTexture_q0kfi"]
viewport_path = NodePath("TestModel/GDCubismUserModel")

[node name="viewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wysar")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptModel" type="OptionButton" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 2
allow_reselect = true
item_count = 1

[node name="ItemListMotion" type="ItemList" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -392.0
offset_right = -16.0
offset_bottom = -201.0
grow_horizontal = 0
grow_vertical = 0

[node name="ItemListExpression" type="ItemList" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -184.0
offset_right = -16.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(956, 564)
scale = Vector2(0.470664, 0.456992)

[node name="GDCubismUserModel" type="GDCubismUserModel" parent="Sprite2D"]
disable_3d = true
transparent_bg = true
gui_disable_input = true
size = Vector2i(1024, 1024)
render_target_update_mode = 4

[node name="GDCubismEffectCustom" type="GDCubismEffectCustom" parent="Sprite2D/GDCubismUserModel"]

[node name="GDCubismEffectEyeBlink" type="GDCubismEffectEyeBlink" parent="Sprite2D/GDCubismUserModel"]

[node name="GDCubismEffectHitArea" type="GDCubismEffectHitArea" parent="Sprite2D/GDCubismUserModel"]

[node name="GDCubismEffectTargetPoint" type="GDCubismEffectTargetPoint" parent="Sprite2D/GDCubismUserModel"]

[node name="GDCubismEffectBreath" type="GDCubismEffectBreath" parent="Sprite2D/GDCubismUserModel"]

[node name="TestModel" type="Sprite2D" parent="."]
visible = false
position = Vector2(472.5, 510.5)
scale = Vector2(1.58398, 1.81445)
texture = SubResource("ViewportTexture_q0kfi")

[node name="GDCubismUserModel" type="GDCubismUserModel" parent="TestModel"]
assets = "res://arts/mao_pro_en/runtime/mao_pro.model3.json"
anim_loop = false
anim_loop_fade_in = true
anim_expression = "exp_01"
anim_motion = "_3"
ParamAngleX = -17.0509
ParamAngleY = 24.5548
ParamAngleZ = 8.52406
ParamCheek = 0.0
ParamFaceInkOn = 0.0
ParamEyeLOpen = 1.0
ParamEyeLSmile = 0.0
ParamEyeLForm = 0.0
ParamEyeROpen = 1.0
ParamEyeRSmile = 0.0
ParamEyeRForm = 0.0
ParamEyeBallX = -0.2
ParamEyeBallY = 0.2
ParamEyeBallForm = 0.0
ParamEyeEffect = 0.0
ParamBrowLY = 0.0
ParamBrowRY = 0.0
ParamBrowLX = 0.0
ParamBrowRX = 0.0
ParamBrowLAngle = 0.0
ParamBrowRAngle = 0.0
ParamBrowLForm = 0.0
ParamBrowRForm = 0.0
ParamA = 0.0
ParamI = 0.0
ParamU = 0.0
ParamE = 0.0
ParamO = 0.0
ParamMouthUp = 1.0
ParamMouthDown = 0.0
ParamMouthAngry = 0.0
ParamMouthAngryLine = 0.0
ParamBodyAngleX = -3.29116
ParamBodyAngleY = 5.20801
ParamBodyAngleZ = 6.89617
ParamBreath = 0.229385
ParamLeftShoulderUp = -1.626
ParamRightShoulderUp = -8.333
ParamArmLA01 = 2.78853
ParamArmLA02 = -1.48417
ParamArmLA03 = -0.5594
ParamHandLA = 0.0
ParamArmRA01 = 0.0
ParamArmRA02 = 0.0
ParamArmRA03 = 0.0
ParamWandRotate = 0.0
ParamHandRA = 0.0
ParamInkDrop = 0.0
ParamInkDropRotate = 0.0
ParamInkDropOn = 0.0
ParamArmLB01 = 0.0
ParamArmLB02 = 0.0
ParamArmLB03 = 0.0
ParamHandLB = 0.0
ParamHatForm = 0.0
ParamArmRB01 = 4.75286
ParamArmRB02 = 25.7589
ParamArmRB02Y = 0.0
ParamArmRB03 = 4.69755
ParamHandRB = -10.0
ParamAllX = 0.0
ParamAllY = 0.0
ParamAllRotate = 0.0
ParamHairFront = 0.12188
ParamHairSideL = 0.0681089
ParamHairSideR = 0.0681089
ParamHairBack = 0.0733082
ParamHairBackR = 0.0706266
ParamHairBackL = 0.0706266
ParamoHairMesh = 0.0268198
ParamHairFrontFuwa = -0.0854693
ParamHairSideFuwa = 0.343006
ParamHairBackFuwa = 0.638365
ParamWing = 0.217372
ParamRibbon = -0.108725
ParamHatBrim = -0.100777
ParamHatTop = -0.0526123
ParamAccessory1 = 0.134774
ParamAccessory2 = -0.0150165
ParamString = 0.132195
ParamRobeL = 0.129668
ParamRobeR = 0.129668
ParamRobeFuwa = 0.207195
ParamHeartMissOn = 0.0
ParamHeartBackMissOn = 0.0
ParamHeartColorRainbow = 0.0
ParamHeartHealOn = 1.0
ParamHeartBackHealOn = 0.0
ParamHeartColorHeal = 0.0
ParamHeartDrow = 14.7772
ParamHeartSize = 0.0
ParamHeartColorLight = 0.0
ParamWandInkColorRainbow = 0.0
ParamWandInkColorHeal = 0.0
ParamWandInk = 0.471354
ParamSmokeOn = 0.0
ParamSmoke = 0.0
ParamExplosionChargeOn = 0.0
ParamExplosionLightCharge = 0.0
ParamExplosionOn = 0.0
ParamExplosion = 0.0
ParamRabbitX = 0.0
ParamRabbitY = 1.0
ParamRabbitRotate = 0.0
ParamRabbitEliminationEffect = 0.0
ParamRabbitAppearance = 0.0
ParamRabbitSize = 0.0
ParamRabbitDraworder = 0.0
ParamRabbitEar = 0.0
Param5 = 0.0
ParamRabbitLight = 0.0
ParamRabbitLightSize = 0.0
ParamAuraOn = 0.0
ParamAura = 0.0
ParamAuraColor1 = 0.0
ParamAuraColor2 = 0.0
ParamHeartLightOn = 0.0
ParamHeartLight = 0.0
ParamHeartLightColor = 0.0
ParamHealLightOn = 0.0
ParamHealLight = 0.0
ParamStrengthenLightOn = 0.0
ParamStrengthenLight = 0.0
ParamStrengthenLightMove = 0.0
ParamMagicPositionX = 0.0
ParamMagicPositionY = 0.0
ParamAllColor1 = 0.0
ParamAllColor2 = 0.0
PartCore = 1.0
Part = 1.0
Part2 = 1.0
PartInk = 1.0
PartSmoke = 1.0
PartExplosionLight = 1.0
Partaura = 1.0
PartLight = 1.0
PartHeart = 1.0
PartHat = 1.0
PartHairSide = 1.0
PartHairFront = 1.0
PartHairBack = 1.0
PartBrow = 1.0
PartEye = 1.0
PartCheek = 1.0
PartNose = 1.0
PartMouth = 1.0
PartFace = 1.0
PartEar = 1.0
PartNeck = 1.0
PartRobe = 1.0
PartHoodie = 1.0
PartLeg = 1.0
PartArmLA = 1.0
PartArmRA = 0.0
PartArmLB = 0.0
PartArmRB = 1.0
PartEyeBall = 1.0
PartWandA = 1.0
PartWandB = 1.0
disable_3d = true
transparent_bg = true
gui_disable_input = true
render_target_update_mode = 4

[node name="GDCubismEffectEyeBlink" type="GDCubismEffectEyeBlink" parent="TestModel/GDCubismUserModel"]

[node name="GDCubismEffectCustom" type="GDCubismEffectCustom" parent="TestModel/GDCubismUserModel"]

[node name="GDCubismEffectHitArea" type="GDCubismEffectHitArea" parent="TestModel/GDCubismUserModel"]

[node name="GDCubismEffectTargetPoint" type="GDCubismEffectTargetPoint" parent="TestModel/GDCubismUserModel"]

[node name="GDCubismEffectBreath" type="GDCubismEffectBreath" parent="TestModel/GDCubismUserModel"]

[connection signal="item_selected" from="UI/OptModel" to="." method="_on_opt_model_item_selected"]
[connection signal="item_selected" from="UI/ItemListMotion" to="." method="_on_item_list_motion_item_selected"]
[connection signal="item_selected" from="UI/ItemListExpression" to="." method="_on_item_list_expression_item_selected"]
[connection signal="motion_finished" from="Sprite2D/GDCubismUserModel" to="." method="_on_motion_finished"]
